<resources>
    <string name="app_name">TailwebsAppointmentApp</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="will_send">Will send you reset password link via email</string>
    <string name="sign_in">Sign in to continue</string>
    <string name="login">Login</string>
    <string name="back_to_login">Back to login</string>
    <string name="action_ok">Ok</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="customer">Customer</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading please wait...</string>
    <string name="error_no_internet">No Internt Connection!</string>
    <string name="forgot_password">Forgot password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>