<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center"
        android:id="@+id/logo"
        android:src="@drawable/suit"
        android:layout_centerInParent="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textSize="22sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/welcome_back"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7sp"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/sign_in"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="32sp"
        android:layout_marginRight="32sp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            app:errorTextAppearance="@style/errorEditTextAppearance"
            app:hintTextAppearance="@style/EditTextHintAppearance"
            app:helperTextEnabled="false"
            style="@style/HintAppearance"
            android:singleLine="true"
            android:hint="Email"
            android:baselineAligned="false"
            android:id="@+id/textInputLayoutEmailId">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:background="@drawable/bg_shape"
                android:layout_marginBottom="5sp"
                android:layout_marginTop="5sp"
                android:gravity="left|center_vertical"
                android:textColorHint="#c0c0c0"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:paddingLeft="20sp"
                android:inputType="textEmailAddress"
                android:id="@+id/emailId">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="vertical"
        android:layout_marginLeft="32sp"
        android:gravity="center"
        android:layout_marginRight="32sp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            app:errorTextAppearance="@style/errorEditTextAppearance"
            app:hintTextAppearance="@style/EditTextHintAppearance"
            app:helperTextEnabled="false"
            android:singleLine="true"
            android:hint="Password"
            style="@style/HintAppearance"
            android:baselineAligned="false"
            android:id="@+id/textInputLayoutPassId">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:gravity="left|center_vertical"
                android:textColorHint="#c0c0c0"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:paddingLeft="20sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:background="@drawable/bg_shape"
                android:inputType="textPassword"
                android:id="@+id/passId">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:layout_marginRight="32sp"
        android:id="@+id/forgotPassId"
        android:layout_marginLeft="32sp"
        android:textColor="#78000000"
        android:layout_marginTop="20sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="32sp"
        android:background="@color/red"
        android:text="Login"
        android:id="@+id/loginId"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginRight="32sp">

    </Button>

</LinearLayout>